--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
       </ul>
     </div>
 </nav>
-<body>
+<body><br/>
   <div class="d-flex align-items-start">
     <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
       <a class="nav-link active" id="v-pills-appetizers-tab" data-bs-toggle="pill" href="#v-pills-appetizers" role="tab" aria-controls="v-pills-appetizers" aria-selected="true">Appetizers</a>
@@ -142,6 +142,15 @@
               <h5 class="card-title">Cucumber Salad</h5>
               <p class="card-text">Cucumber salad with chili flakes and a soy sauce and seseme oil dressing.</p>
             </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 card-menu">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5j6IDV7dB9lMnFBPMzrPvPwAGeuBIdUsXfw&usqp=CAU" class="card-img-top card-img-top-menu" alt="hot and sour soup">
+              <div class="card-body">
+                <h5 class="card-title">Hot and Sour Soup</h5>
+                <p class="card-text">A hot and sour soup.</p>
+              </div>
           </div>
         </div>
       </div>
