--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
 </nav>
 <body><br/>
   <div class="d-flex align-items-start">
-    <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+    <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical menu-pills">
       <a class="nav-link active" id="v-pills-appetizers-tab" data-bs-toggle="pill" href="#v-pills-appetizers" role="tab" aria-controls="v-pills-appetizers" aria-selected="true">Appetizers</a>
       <a class="nav-link" id="v-pills-entrees-tab" data-bs-toggle="pill" href="#v-pills-entrees" role="tab" aria-controls="v-pills-entrees" aria-selected="false">Entrees</a>
       <a class="nav-link" id="v-pills-sides-tab" data-bs-toggle="pill" href="#v-pills-sides" role="tab" aria-controls="v-pills-sides" aria-selected="false">Sides</a>
