--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #F00C0C;">
-    <div class="container-fluid">
-      <a class="navbar-brand" style="" href="#">Ming's Diner</a>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item px-3">
-          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link active" aria-current="page" href="menu.html">MENU</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link active" aria-current="page" href="locations.html">LOCATIONS</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link active" aria-current="page" href="contact.html">CONTACT</a>
-        </li>
-        <li class="nav-item px-3">
-          <button type="button" class="btn btn-warning">ORDER NOW</button>
-        </li>
-      </ul>
-    </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Ming's Diner</a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item px-3">
+        <a class="nav-link active navbarlink" aria-current="page" href="index.html">HOME</a>
+      </li>
+      <li class="nav-item px-3">
+        <a class="nav-link active navbarlink" aria-current="page" href="menu.html">MENU</a>
+      </li>
+      <li class="nav-item px-3 navbarlink">
+        <a class="nav-link active" aria-current="page" href="locations.html">LOCATIONS</a>
+      </li>
+      <li class="nav-item px-3 navbarlink">
+        <a class="nav-link active" aria-current="page" href="contact.html">CONTACT</a>
+      </li>
+      <li class="nav-item px-3 navbarlink">
+        <button type="button" class="btn btn-warning">ORDER NOW</button>
+      </li>
+    </ul>
+  </div>
 </nav>
 <body>
     <div class="col-md-6 offset-md-3">
