--- a/locations.html
+++ b/locations.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locations</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #F00C0C;">
-    <div class="container-fluid">
-      <a class="navbar-brand" style="" href="#">Ming's Diner</a>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item px-3">
-          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link active" aria-current="page" href="menu.html">MENU</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link active" aria-current="page" href="locations.html">LOCATIONS</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link active" aria-current="page" href="contact.html">CONTACT</a>
-        </li>
-        <li class="nav-item px-3">
-          <button type="button" class="btn btn-warning">ORDER NOW</button>
-        </li>
-      </ul>
-    </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Ming's Diner</a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item px-3">
+        <a class="nav-link active navbarlink" aria-current="page" href="index.html">HOME</a>
+      </li>
+      <li class="nav-item px-3">
+        <a class="nav-link active navbarlink" aria-current="page" href="menu.html">MENU</a>
+      </li>
+      <li class="nav-item px-3 navbarlink">
+        <a class="nav-link active" aria-current="page" href="locations.html">LOCATIONS</a>
+      </li>
+      <li class="nav-item px-3 navbarlink">
+        <a class="nav-link active" aria-current="page" href="contact.html">CONTACT</a>
+      </li>
+      <li class="nav-item px-3 navbarlink">
+        <button type="button" class="btn btn-warning">ORDER NOW</button>
+      </li>
+    </ul>
+  </div>
 </nav>
-<body>
-    
-</body>
+<body><br/>
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="card location-card">
+        <div class="card-body">
+          <h5 class="card-title">123 Doe Ave</h5>
+          <p class="card-text">Across the street from fairy land park.</p>
+          <a href="#" class="btn btn-warning location-button">Get Directions</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</body><br/>
 <footer class="bg-light text-center text-lg-start">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
       © 2020 Copyright:
