--- a/contact.html
+++ b/contact.html
@@ -30,36 +30,36 @@
     </ul>
   </div>
 </nav>
-<body>
+<body><br/>
     <div class="col-md-6 offset-md-3">
         <span class="anchor" id="formContact"></span>
-        <hr class="my-5">
         <div class="card card-outline-secondary">
-            <div class="card-header">
+            <div class="card-header contact-header">
                 <h3 class="mb-0">Contact</h3>
             </div>
             <div class="card-body">
                 <form class="form" role="form" autocomplete="off">
                     <fieldset>
-                        <label for="name2" class="mb-0">Name</label>
+                        <label for="name" class="mb-0">Name</label>
                         <div class="row mb-1">
                             <div class="col-lg-12">
-                                <input type="text" name="name2" id="name2" class="form-control" required="">
+                                <input type="text" name="name" id="name" class="form-control" required="">
                             </div>
                         </div>
-                        <label for="email2" class="mb-0">Email</label>
+                        <label for="email" class="mb-0">Email</label>
                         <div class="row mb-1">
                             <div class="col-lg-12">
-                                <input type="text" name="email2" id="email2" class="form-control" required="">
+                                <input type="text" name="email" id="email" class="form-control" required="">
                             </div>
                         </div>
-                        <label for="message2" class="mb-0">Message</label>
+                        <label for="message" class="mb-0">Message</label>
                         <div class="row mb-1">
                             <div class="col-lg-12">
-                                <textarea rows="6" name="message2" id="message2" class="form-control" required=""></textarea>
+                                <textarea rows="6" name="message" id="message" class="form-control" required=""></textarea>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-secondary btn-lg float-right">Send Message</button>
+                        <button type="submit" class="btn btn-warning btn-lg float-right" onclick="collectcontactdata()">Send Message</button>
+                        <script src="contact.js"></script>
                     </fieldset>
                 </form>
             </div>
@@ -67,7 +67,7 @@
 </body>
 <footer class="bg-light text-center text-lg-start">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright:
+      © 2021 Copyright:
       <a class="text-dark" href="#">Kite Technologies</a>
     </div>
 </footer>
