--- a/locations.html
+++ b/locations.html
@@ -36,7 +36,7 @@
       <div class="card location-card">
         <div class="card-body">
           <h5 class="card-title">123 Doe Ave</h5>
-          <p class="card-text">Across the street from fairy land park.</p>
+          <p class="card-text">Across the street from the park.</p>
           <a href="#" class="btn btn-warning location-button">Get Directions</a>
         </div>
       </div>
@@ -45,7 +45,7 @@
 </body><br/>
 <footer class="bg-light text-center text-lg-start">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright:
+      © 2021 Copyright:
       <a class="text-dark" href="#">Kite Technologies</a>
     </div>
 </footer>
