js added, design finished

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <a class="nav-link active" aria-current="page" href="contact.html">CONTACT</a>
       </li>
       <li class="nav-item px-3 navbarlink">
-        <button type="button" class="btn btn-warning">ORDER NOW</button>
+        <a href="ordernow.html"><button type="button" class="btn btn-warning">ORDER NOW</button></a>
       </li>
     </ul>
   </div>
